# test-semantic-release-poetry

./: CHANGELOG.md  changelog.md  pyproject.toml  readme.md
.github/workflows/: build.yml
tests/: test_my_fancy_project.py
