[tool.poetry]
name = "my-fancy-project"
version = "2.0.0"
description = ""
authors = ["bjoluc <mail@bjoluc.de>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = { version = "^1.22.0", python = "^3.6" } # commitizen does not support Python < 3.6
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
