[tool.poetry]
name = "my-fancy-project"
version = "3.0.1"
description = ""
authors = ["bjoluc <mail@bjoluc.de>"]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
commitizen = "^2.34.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
